--- a/Nba_Stats.ipynb
+++ b/Nba_Stats.ipynb
@@ -34,30 +34,30 @@
         }
       ],
       "source": [
-        "# Importation du module permettant d'interagir avec Google Drive dans Google Colab\n",
+        "# Importing the module to interact with Google Drive in Google Colab\n",
         "from google.colab import drive\n",
         "\n",
-        "# Montage de Google Drive dans le répertoire '/content/drive' pour accéder aux fichiers\n",
+        "# Mounting Google Drive to the '/content/drive' directory to access files\n",
         "drive.mount('/content/drive')\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Monter Google Drive pour accéder aux fichiers stockés dans ton Drive\n",
+        "# Mount Google Drive to access files stored in your Drive\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
-        "# Importer la bibliothèque pandas pour manipuler des données tabulaires\n",
+        "# Import the pandas library to work with tabular data\n",
         "import pandas as pd\n",
         "\n",
-        "# Définir le chemin du fichier CSV situé dans le dossier 'NBA_Project' de Google Drive\n",
+        "# Define the path to the CSV file located in the 'NBA_Project' folder on Google Drive\n",
         "file_path = '/content/drive/MyDrive/NBA_Project/nba_stats.csv'\n",
         "\n",
-        "# Charger les données du fichier CSV dans un DataFrame pandas\n",
+        "# Load the data from the CSV file into a pandas DataFrame\n",
         "df = pd.read_csv(file_path)\n",
         "\n",
-        "# Afficher les 5 premières lignes du DataFrame pour avoir un aperçu des données\n",
+        "# Display the first 5 rows of the DataFrame to get an overview of the data\n",
         "df.head()\n"
       ],
       "metadata": {
@@ -360,16 +360,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# Importer la bibliothèque pandas pour la manipulation de données\n",
+        "# Import the pandas library for data manipulation\n",
         "import pandas as pd\n",
         "\n",
-        "# Lire le fichier CSV en précisant le bon séparateur (ici le point-virgule, souvent utilisé en Europe)\n",
+        "# Read the CSV file using the correct delimiter (semicolon, commonly used in Europe)\n",
         "df = pd.read_csv('/content/drive/MyDrive/NBA_Project/nba_stats.csv', sep=';')\n",
         "\n",
-        "# Afficher les 5 premières lignes du DataFrame pour un aperçu rapide des données\n",
+        "# Display the first 5 rows of the DataFrame for a quick preview of the data\n",
         "print(df.head())\n",
         "\n",
-        "# Afficher les types de données de chaque colonne (utile pour détecter d’éventuels problèmes, comme des nombres lus comme du texte)\n",
+        "# Display the data types of each column (useful for identifying potential issues, such as numbers read as text)\n",
         "print(df.dtypes)\n"
       ],
       "metadata": {
@@ -427,11 +427,11 @@
       "source": [
         "from sklearn.preprocessing import StandardScaler\n",
         "\n",
-        "# Supprimer les colonnes non pertinentes pour l'analyse (comme le nom du joueur, l'équipe ou des colonnes vides)\n",
-        "# 'errors=\"ignore\"' permet d'éviter une erreur si une des colonnes n'existe pas\n",
+        "# Remove irrelevant columns for the analysis (such as player name, team, or empty columns)\n",
+        "# 'errors=\"ignore\"' prevents an error if one of the columns does not exist\n",
         "features = df.drop(columns=['PLAYER', 'TEAM', 'NONE'], errors='ignore')\n",
         "\n",
-        "# Standardisation des données : transforme les variables pour qu'elles aient une moyenne de 0 et un écart-type de 1\n",
+        "# Standardize the data: transforms the variables to have a mean of 0 and a standard deviation of 1\n",
         "scaler = StandardScaler()\n",
         "features_scaled = scaler.fit_transform(features)\n"
       ],
@@ -447,15 +447,15 @@
         "from sklearn.impute import SimpleImputer\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "\n",
-        "# Supprimer les colonnes non pertinentes (textuelles ou inutiles pour l'analyse)\n",
+        "# Remove irrelevant columns (textual or unnecessary for the analysis)\n",
         "features = df.drop(columns=['PLAYER', 'TEAM', 'NONE'], errors='ignore')\n",
         "\n",
-        "# Gérer les valeurs manquantes :\n",
-        "# Remplacer les NaN (valeurs manquantes) par la moyenne de chaque colonne\n",
+        "# Handle missing values:\n",
+        "# Replace NaNs (missing values) with the mean of each column\n",
         "imputer = SimpleImputer(strategy='mean')\n",
         "features_imputed = imputer.fit_transform(features)\n",
         "\n",
-        "# Standardiser les données pour que chaque variable ait une moyenne de 0 et un écart-type de 1\n",
+        "# Standardize the data so that each variable has a mean of 0 and a standard deviation of 1\n",
         "scaler = StandardScaler()\n",
         "features_scaled = scaler.fit_transform(features_imputed)\n"
       ],
@@ -470,8 +470,8 @@
       "source": [
         "from sklearn.metrics.pairwise import cosine_similarity\n",
         "\n",
-        "# Calcul de la matrice de similarité cosinus entre tous les joueurs\n",
-        "# Chaque ligne représente un joueur, chaque colonne représente sa similarité avec les autres joueurs\n",
+        "# Compute the cosine similarity matrix between all players\n",
+        "# Each row represents a player, and each column represents their similarity to other players\n",
         "similarity_matrix = cosine_similarity(features_scaled)\n"
       ],
       "metadata": {
@@ -485,23 +485,23 @@
       "source": [
         "import numpy as np\n",
         "\n",
-        "# Extraire la liste des noms de joueurs depuis le DataFrame\n",
+        "# Extract the list of player names from the DataFrame\n",
         "players = df['PLAYER'].tolist()\n",
         "\n",
-        "# Choisir un joueur dont on veut connaître les profils similaires\n",
+        "# Choose a player for whom we want to find similar profiles\n",
         "player_name = 'Luka Doncic'\n",
         "\n",
-        "# Trouver l'index de ce joueur dans la liste\n",
+        "# Find the index of the selected player in the list\n",
         "player_idx = players.index(player_name)\n",
         "\n",
-        "# Extraire les scores de similarité entre ce joueur et tous les autres\n",
+        "# Extract similarity scores between the selected player and all other players\n",
         "similarities = similarity_matrix[player_idx]\n",
         "\n",
-        "# Trier les indices par ordre décroissant de similarité (on exclut le joueur lui-même en ignorant le 1er)\n",
+        "# Sort indices in descending order of similarity (excluding the player themselves by skipping the first)\n",
         "most_similar_idx = np.argsort(similarities)[::-1][1:6]\n",
         "\n",
-        "# Afficher les 5 joueurs les plus similaires, avec leur score de similarité\n",
-        "print(f\"Joueurs les plus similaires à {player_name} :\")\n",
+        "# Display the top 5 most similar players along with their similarity scores\n",
+        "print(f\"Players most similar to {player_name}:\")\n",
         "for idx in most_similar_idx:\n",
         "    print(f\"{players[idx]} (score: {similarities[idx]:.4f})\")\n"
       ],
@@ -539,15 +539,15 @@
         "import pandas as pd\n",
         "\n",
         "# -----------------------------\n",
-        "# 1. Clustering des joueurs (KMeans)\n",
+        "# 1. Player clustering (KMeans)\n",
         "# -----------------------------\n",
         "kmeans = KMeans(n_clusters=4, random_state=42)\n",
         "clusters = kmeans.fit_predict(features_scaled)\n",
         "\n",
-        "df['Cluster'] = clusters  # On ajoute les clusters dans le dataframe original\n",
+        "df['Cluster'] = clusters  # Add cluster labels to the original DataFrame\n",
         "\n",
         "# -----------------------------\n",
-        "# 2. Réduction en 2D avec PCA\n",
+        "# 2. Dimensionality reduction to 2D using PCA\n",
         "# -----------------------------\n",
         "pca = PCA(n_components=2)\n",
         "features_pca = pca.fit_transform(features_scaled)\n",
@@ -556,17 +556,17 @@
         "df['PCA2'] = features_pca[:, 1]\n",
         "\n",
         "# -----------------------------\n",
-        "# 3. Visualisation interactive avec Plotly\n",
+        "# 3. Interactive visualization with Plotly\n",
         "# -----------------------------\n",
         "fig = px.scatter(df, x='PCA1', y='PCA2', color='Cluster', hover_name='PLAYER',\n",
-        "                 title='Clustering des joueurs NBA (PCA + KMeans)',\n",
-        "                 labels={'Cluster': 'Groupe'})\n",
+        "                 title='NBA Player Clustering (PCA + KMeans)',\n",
+        "                 labels={'Cluster': 'Group'})\n",
         "fig.show()\n",
         "\n",
         "# -----------------------------\n",
-        "# 4. Heatmap de similarité (Seaborn)\n",
+        "# 4. Similarity heatmap (Seaborn)\n",
         "# -----------------------------\n",
-        "# Limiter à un sous-ensemble pour lisibilité (ex: 25 premiers joueurs)\n",
+        "# Limit to a subset for readability (e.g., first 25 players)\n",
         "import numpy as np\n",
         "subset_indices = df.index[:25]\n",
         "subset_similarity = cosine_similarity(features_scaled[subset_indices])\n",
@@ -574,7 +574,7 @@
         "plt.figure(figsize=(12, 8))\n",
         "sns.heatmap(subset_similarity, xticklabels=df['PLAYER'].iloc[subset_indices],\n",
         "            yticklabels=df['PLAYER'].iloc[subset_indices], cmap=\"viridis\", annot=True, fmt=\".2f\")\n",
-        "plt.title(\"Matrice de similarité entre joueurs NBA (extrait)\")\n",
+        "plt.title(\"Similarity Matrix Between NBA Players (Sample)\")\n",
         "plt.xticks(rotation=90)\n",
         "plt.tight_layout()\n",
         "plt.show()\n"
@@ -639,15 +639,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "l25QpjM15Ilw"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
